# rollpoly

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.amazonq/rules/rust/: rules.md
.amazonq/rules/steering/: git.md  rust.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: auto-merge-dependabot.yml  ci.yml  dependabot-auto-merge.yml  release.yml  setup-labels.yml
benches/: dice_rolling_benchmark.rs
examples/: basic_usage.rs
scripts/: bump-version.sh  check-dependencies.sh  enable-full-precommit.sh  full-checks.sh  publish-crate.sh
src/: evaluator.rs  lib.rs  main.rs  parser.rs
tests/: integration_test.rs
