[package]
name = "rollpoly"
version = "0.4.0"
edition = "2021"
rust-version = "1.70"
authors = ["Ray Krueger <raykrueger@gmail.com>"]
license = "Apache-2.0"
description = "A comprehensive dice rolling library and CLI for tabletop gaming with advanced polyhedral dice support"
homepage = "https://github.com/raykrueger/rollpoly"
repository = "https://github.com/raykrueger/rollpoly"
documentation = "https://docs.rs/rollpoly"
readme = "README.md"
keywords = ["dice", "gaming", "cli", "terminal", "polyhedral"]
categories = ["command-line-utilities", "games"]
exclude = [
    ".github/*",
    ".amazonq/*",
    "scripts/*",
    "docs/*",
    "target/*",
    "*.log"
]
include = [
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

[dependencies]
# CLI parsing with derive macros
clap = { version = "4.0", features = ["derive"] }
# Flexible error handling for applications
anyhow = "1.0"
# Structured error types for libraries
thiserror = "2.0"
# Random number generation
rand = "0.9"
# Readline functionality with command history
rustyline = "14.0"
# Directory utilities for finding home directory
dirs = "5.0"

[lib]
path = "src/lib.rs"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[features]
default = []
